--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "modules/accord"]
 	path = modules/accord
-	url = https://github.com/aweisberg/cassandra-accord.git
-	branch = 20089
+	url = https://github.com/apache/cassandra-accord.git
+	branch = trunk
